pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__193-link_reference_definitions.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/193-link_reference_definitions.md
---
]8;;file://HOSTNAME/ROOT/url\[34mfoo[0m]8;;\
